Made correct adding tags to posts